# resumaverick

./: .gitignore  README.md  auth.sh  download_language_data.sh  install_debian.sh  kill_instance.sh  pyproject.toml  spin_spot_gpu_gcp.sh  train_bert.sh
resumaverick/: augmentation.py  bert_classifier.py  utils.py
tests/: test_augmentation.py  test_bert_classifier.py
